applications/zero-trust-app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: zero-trust-app
  namespace: security

spec:
  replicas: 2

  selector:
    matchLabels:
      app: zero-trust-app

  template:
    metadata:
      labels:
        app: zero-trust-app

    spec:
      serviceAccountName: irsa-sa

      securityContext:
        fsGroup: 2000   # ✅ POD LEVEL

      containers:
        - name: zero-trust-container
          image: 584673484425.dkr.ecr.ap-south-1.amazonaws.com/eks-zero-trust-app:IMAGE_TAG  ##changed latest to img tag
          imagePullPolicy: Always

          ports:
            - containerPort: 3000

          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true   # ✅ IMPORTANT
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault

          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
