applications/zero-trust-app/base/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: zero-trust-service
  namespace: security
  labels:
    app: zero-trust-app

spec:
  type: ClusterIP

  selector:
    app: zero-trust-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
