applications/zero-trust-app/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: zero-trust-ingress
  namespace: security

  annotations:
    kubernetes.io/ingress.class: alb   # 🔥 IMPORTANT
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

spec:
  ingressClassName: alb

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zero-trust-service   # ✅ MUST MATCH SERVICE
                port:
                  number: 80
