applications/zero-trust-app/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: zero-trust-network-policy
  namespace: security

spec:
  podSelector:
    matchLabels:
      app: zero-trust-app

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: ingress-nginx

      ports:
        - protocol: TCP
          port: 3000

  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
